# blaze-haskell

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: api_types.rs  error.rs  game_state.rs  lib.rs  main.rs  planner.rs  router.rs
src/game_state/: battlesnake.rs  cell.rs  mod.rs  movement.rs
src/planner/: check_collisions.rs  mod.rs
