[package]
name = "blaze-haskell"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["json"] }
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
